--- a/posts/2023/02/08/x619ap.md
+++ b/posts/2023/02/08/x619ap.md
@@ -30,7 +30,7 @@ And here comes in that infamous error:
 
 <figure>
 
-![](../../../images/2023/02/02-08-critical-software-update.png)
+![](../../../../images/2023/02/02-08-critical-software-update.png)
 
 <figcaption>
 
